@@ -1,7 +1,7 @@
 use strict;
 use warnings;
 
-use Test::More 'tests' => 10;
+use Test::More 'tests' => 12;
 
 my @args = ($^X,qw{bin/testrail-report --apiurl http://testrail.local --user "test@fake.fake" --password "fake" --project "CRUSH ALL HUMANS" --run "SEND T-1000 INFILTRATION UNITS BACK IN TIME" --mock t/test_multiple_files.tap});
 my $out = `@args`;
@@ -35,3 +35,12 @@ $out = `@args`;
 is($? >> 8, 0, "Exit code OK reported with spawn");
 $matches = () = $out =~ m/Reporting result of case.*OK/ig;
 is($matches,2,"Attempts to spawn work");
+
+#Test that help works
+@args = ($^X,qw{bin/testrail-report --help});
+$out = `@args`;
+is($? >> 8, 0, "Exit code OK reported with help");
+$matches = () = $out =~ m/usage/ig;
+is($matches,1,"Help output OK");
+
+
