@@ -1,7 +1,7 @@
 use strict;
 use warnings;
 
-use Test::More "tests" => 20;
+use Test::More "tests" => 22;
 
 #check plan mode
 my @args = ($^X,qw{bin/testrail-tests --apiurl http://testrail.local --user "test@fake.fake" --password "fake" -j TestProject -p "GosPlan" -r "Executing the great plan" -m t --config testConfig --mock --no-recurse});
@@ -66,5 +66,11 @@ $out = `@args`;
 is($? >> 8, 0, "Exit code OK running no plan mode, no recurse");
 chomp $out;
 like($out,qr/\nskipall\.test$/,"Gets test correctly in no plan mode, no recurse");
+
+#Verify no-match returns non path
+@args = ($^X,qw{bin/testrail-tests --help});
+$out = `@args`;
+is($? >> 8, 0, "Exit code OK asking for help");
+like($out,qr/usage/i,"Help output OK");
 
 
