@@ -2,6 +2,7 @@ Revision history for Perl module TestRail::API
 
 0.025 2015-05-?? TEODESIAN
     - Fix test failures on windows (and an issue in testrail-tests on win32)
+    - Fix issue where testrail-tests was unresponsive to --help
 
 0.024 2015-05-17 TEODESIAN
     - Allow spawning of plans in Test::Rail::Parser (and those programs depending on it)
